--- a/public_html/css/tablet.css
+++ b/public_html/css/tablet.css
@@ -136,7 +136,7 @@
     font-weight: normal;
     padding-bottom: 10px;
     padding-right: 50px;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 /*
 
